# icross-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  PRODUCT.md  README.md  README_CN.md  docker-compose.yml  package-lock.json  pricing-helper.html  pyproject.toml  start.bat  start.sh
data/: ai_model_config.json  providers.json
docs/: AI跨模块规划.md  Design.md  Requirements Origin.md  Requirements.md  UX-Redesign-Plan.md  frontend_integration_plan.md  research.md
frontend-extension/: README.md  background.js  content-1688.js  content-pinduoduo.js  content-taobao.js  manifest.json  package.json  popup.css  popup.html  popup.js
frontend-extension/lib/: api.js  storage.js  types.js
frontend-react/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-react/src/: App.tsx  index.css  main.tsx
frontend-react/src/api/: chat.ts  client.ts  sessions.ts  shops.ts
frontend-react/src/components/: AppLayout.tsx  ChatPanel.tsx  ConfirmModal.tsx  ContextPanel.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  FloatingAgent.tsx  OnboardingWizard.tsx  PageHeader.tsx  PageWrapper.tsx  SessionList.tsx  StatusTag.tsx  SyncIndicator.tsx
frontend-react/src/hooks/: useApi.ts  useWebSocket.ts
frontend-react/src/pages/: AgentPage.tsx  OperationsPage.tsx  SettingsPage.tsx
frontend-react/src/pages/operations/: AutoPilot.tsx  Dashboard.tsx  Drafts.tsx  Finance.tsx  Hub.tsx  Images.tsx  (+13 more)
frontend-react/src/stores/: chatStore.ts
frontend-react/src/utils/: currency.ts
scripts/: build_exe.py  create_shortcut.ps1  enrich_products.py  launcher.vbs
src/data/: agent_tasks.json  analytics.json  auto_pilot_config.json  drafts.json  listing_templates.json  listings.json  orders.json  ozon_categories.json  price_history.json  pricing_rules.json  seller_info.json  session_events.json  session_messages.json  sessions.json  sourcing_sessions.json  stock_history.json  tasks.json  warehouses.json  workflows.json
src/icross/: __init__.py
src/icross/api/: ai_utils.py  main.py
src/icross/core/: __init__.py  config.py
src/icross/services/: agent_task_manager.py  category_matcher.py  compound_task.py  document_reader.py  extension_processor.py  feishu_notifier.py  feishu_registration.py  image_gen.py  notification.py  ozon_costs.py  ozon_rules.py  plan_storage.py  product_parser.py  report_service.py  scheduler.py  task_queue.py  workflow.py
tests/: test_tools_product.py
(+67 files in other folders)
