[project]
name = "icross-agent"
version = "0.1.0"
description = "AI-powered e-commerce operations system for managing Ozon shops"
requires-python = ">=3.11"

dependencies = [
    # LangChain/LangGraph - resolved via uv.sources below
    "langchain-core>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-prebuilt>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    # LLM providers
    "anthropic>=0.30.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13,<14",
    # Database (所有存储已迁移到 JSON 文件，无需数据库)
    # "sqlalchemy>=2.0.0",
    # "asyncpg>=0.29.0",
    # "psycopg[binary]>=3.3.3",
    # Task queue (optional)
    # "celery>=5.4.0",
    # "redis>=5.0.0",
    "apscheduler>=3.10.0",
    # Image processing
    "rembg>=2.0.0",
    "Pillow>=10.0.0",
    "ozonapi-async>=0.19.0",
    # Feishu notification
    "lark-oapi>=1.5.3,<2",
    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
# Local vendor packages - all editable installs to avoid dep conflicts
langchain-core = { path = "vendors/langchain/libs/core", editable = true }
langgraph = { path = "vendors/langgraph/libs/langgraph", editable = true }
langgraph-checkpoint = { path = "vendors/langgraph/libs/checkpoint", editable = true }
langgraph-checkpoint-postgres = { path = "vendors/langgraph/libs/checkpoint-postgres", editable = true }
langgraph-prebuilt = { path = "vendors/langgraph/libs/prebuilt", editable = true }
langchain-anthropic = { path = "vendors/langchain/libs/partners/anthropic", editable = true }
langchain-openai = { path = "vendors/langchain/libs/partners/openai", editable = true }
langchain-community = { path = "vendors/langchain-community/libs/community", editable = true }
rembg = { path = "vendors/rembg", editable = true }

# Third-party vendors with their own pyproject.toml

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icross"]

[tool.hatch]
package-dir = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
